--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     },
     "dependencies": {
         "lucide-react": "^0.542.0",
-        "react-beautiful-dnd": "^13.1.1"
+        "react-beautiful-dnd": "^13.1.1",
+        "react-dropzone": "^14.3.8"
     }
 }
